<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileMoneyManagement</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="txtheader">Home</string>
    <string name="month">This month</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="expenseamount"></string>
    <string name="title_activity_menu_tab">MenuTabActivity</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="category">Category</string>
    <string name="catexamount">$23.45</string>
    <string name="catincomeamount"></string>
    <string name="catdate">2014/April/05 11:10</string>
    <string name="username">User Name</string>
    <string name="password">PassWord</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forget your Password</string>
    <string name="register_new_account">Register</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="catincomedate"></string>
    <string name="privacy_text">Term and Privacy. Copyright 2014 Rise UP Developer</string>
    <string name="register">Register</string>
    <string name="title_activity_segmented_radio">SegmentedRadioActivity</string>
    <string name="title_activity_income_add_new">IncomeAddNewActivity</string>
    <string name="addnewexpense">New Expense</string>
    <string name="updateincome">Modifier Income</string>
    <string name="modexpense">Modifier Expense</string>
    <string name="addnewincome">New Income</string>
    <string name="expamount">Amount:</string>
    <string name="expnote">Note:</string>
    <string name="expcategory">Category:</string>
    <string name="menu_settings">Settings</string>
    <string name="select">Choose an item</string>
    <string name="button_label">Save</string>
    <string name="title_activity_expense_add_new">ExpenseAddNewActivity</string>
    <string name="incomeamount">Amount:</string>
    <string name="incomenote">Note:</string>
    <string name="incomecategory">Category:</string>
    <string name="title_activity_income_modifier">IncomeModifierActivity</string>
    <string name="title_activity_expense_modifier">ExpenseModifierActivity</string>
    <string name="title_activity_tab_host">TabHostActivity</string>
    <string name="title_activity_child">ChildActivity</string>

</resources>
