<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
      <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

      <EditText
          android:id="@+id/txtPassword"
          android:inputType="textPassword"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/txtUsername"
          android:layout_below="@+id/txtUsername"
          android:layout_marginTop="14dp"
          android:ems="10"
          android:hint="@string/password" />
      
      <Button
          android:id="@+id/btnLogin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/txtPassword"
          android:layout_below="@+id/txtPassword"
          android:onClick="onClickLogin" 
          android:text="@string/login" />

      <TextView
          android:id="@+id/tvForgotPass"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/btnLogin"
          android:layout_alignBottom="@+id/btnLogin"
          android:layout_alignRight="@+id/txtPassword"
          android:text="@string/forgot_password" />
      <TextView
          android:id="@+id/tvRegister"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:onClick="onClickToRegister" 
          android:clickable="true"
          android:text="@string/register_new_account" />
</RelativeLayout>
