<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeAddNewActivity" >

    <TextView
        android:id="@+id/txtnewincome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#555D63"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/addnewincome"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtnewincomeamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtnewincome"
        android:layout_marginLeft="16dp"
        android:textSize="14sp"
        android:layout_marginTop="34dp"
        android:text="@string/incomeamount" />

    <TextView
        android:id="@+id/txtincomenote"
        android:textSize="14sp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtnewincome"
        android:layout_below="@+id/txtnewincomeamount"
        android:layout_marginTop="29dp"
        android:text="@string/incomenote" />

    <EditText
        android:id="@+id/editincomenote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtincomenote"
        android:layout_alignLeft="@+id/editeincomeamount"
        android:inputType="text"
        android:layout_marginRight="10sp"
        android:ems="10" />

    <EditText
        android:layout_marginRight="10sp"
        android:id="@+id/editeincomeamount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtincomenote"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/txtnewincomeamount"
        android:ems="10"
        android:inputType="numberDecimal" >
		
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtincomecategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtincomenote"
        android:layout_below="@+id/txtincomenote"
        android:layout_marginTop="30dp"
        android:text="@string/incomecategory" />
    <LinearLayout
	    android:id="@+id/layout_spinner"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="70sp"
	    android:layout_marginTop="10dp"
	    android:layout_alignLeft="@+id/txtincomecategory"
	    android:layout_below="@+id/editincomenote"
	    android:layout_marginRight="10sp"
	    android:orientation="vertical" >
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select" />
    <Button
     android:id="@+id/btnsave"
     android:layout_width="100dp"
     android:layout_marginTop="10dp"
     android:layout_height="wrap_content"
     android:text="@string/button_label" />

</LinearLayout>

</RelativeLayout>