<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView
         android:id="@+id/txtcategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="40dp"
         android:text="@string/category"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold" />

     <TextView
         android:id="@+id/catexpamount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/txtcategory"
         android:layout_alignBottom="@+id/txtcategory"
         android:layout_alignParentRight="true"
         android:layout_marginRight="27dp"
         android:text="@string/catexamount" />

     <TextView
         android:id="@+id/catexpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/txtcategory"
         android:layout_below="@+id/txtcategory"
         android:layout_marginTop="14dp"
         android:text="@string/catdate" />
    
</RelativeLayout>
